@@ -74,7 +74,7 @@ using _STLP_VENDOR_CSTD::fprintf;
 using _STLP_VENDOR_CSTD::fputc;
 using _STLP_VENDOR_CSTD::fputs;
 using _STLP_VENDOR_CSTD::fread;
-#    if _WIN32_WCE < 0x500 // CE5 stopped supplying this
+#    if !defined (_WIN32_WCE) || (_WIN32_WCE < 0x500) // CE5 stopped supplying this
 using _STLP_VENDOR_CSTD::freopen;
 #    endif
 using _STLP_VENDOR_CSTD::fscanf;
@@ -84,7 +84,7 @@ using _STLP_VENDOR_CSTD::ftell;
 using _STLP_VENDOR_CSTD::fwrite;
 
 #    if  !(defined (__IBMCPP__) && (__IBMCPP__ >= 500))
-#      if _WIN32_WCE < 0x500 // CE5 stopped supplying this except as macros. TODO: use inline function to redirect to the macros?
+#      if !defined (_WIN32_WCE) || (_WIN32_WCE < 0x500) // CE5 stopped supplying this except as macros. TODO: use inline function to redirect to the macros?
  using _STLP_VENDOR_CSTD::getc;
  using _STLP_VENDOR_CSTD::putc;
 #      endif
@@ -93,12 +93,12 @@ using _STLP_VENDOR_CSTD::fwrite;
 #    endif
 
 using _STLP_VENDOR_CSTD::gets;
-#    if _WIN32_WCE < 0x500 // CE5 stopped supplying this
+#    if !defined (_WIN32_WCE) || (_WIN32_WCE < 0x500) // CE5 stopped supplying this
 using _STLP_VENDOR_CSTD::perror;
 #    endif
 using _STLP_VENDOR_CSTD::printf;
 using _STLP_VENDOR_CSTD::puts;
-#    if _WIN32_WCE < 0x500 // CE5 stopped supplying this
+#    if !defined (_WIN32_WCE) || (_WIN32_WCE < 0x500) // CE5 stopped supplying this
 using _STLP_VENDOR_CSTD::remove;
 using _STLP_VENDOR_CSTD::rename;
 using _STLP_VENDOR_CSTD::rewind;
