@@ -1,3 +1,8 @@
+2007-08-31  Francois Dumont  <dums@users.sourceforge.net>
+
+	* stlport/stl/_cstdio.h, _ctime.h: Add missing macro definition
+	test before using _WIN32_WCE thanks bug report 1784174.
+
 2007-08-26  Francois Dumont  <dums@users.sourceforge.net>
 
 	* stlport/stl/config/user_config.h, host.h: Moved the administrative
